# SlicerPythonTestRunner

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
SlicerPythonTestRunner/: CMakeLists.txt  SlicerPythonTestRunner.py
SlicerPythonTestRunner/SlicerPythonTestRunnerLib/: Case.py  Decoractor.py  Decorator.py  EnsureRequirements.py  ExportDialog.py  IconPath.py  LoadingWidget.py  ProcessRunnerLogic.py  QWidget.py  Results.py  RunnerLogic.py  RunnerWidget.py  Settings.py  SettingsDialog.py  Signal.py  TestCoverage.py  TreeProxyModel.py  TreeView.py  __init__.py
SlicerPythonTestRunner/Testing/: a_test_results_file.json  a_test_results_file_with_collect_errors.json  conftest.py  test_runner_logic.py  test_runner_widget.py  test_settings_dialog.py  test_tree_view.py  utils.py
